[package]
name = "serrana"
version = "0.1.0"
edition = "2021"

# <=== Compilation Profiles ===>
[profile.dev]
strip = true
opt-level = 2
incremental = true
lto = false

# <=== Generic Dependencies ===>
[dependencies]
dotenvy = "0.15.6"
evalexpr = "8.1.0"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.2.0"
toml = "0.7.2"


# <=== Advanced Dependencies ===>
[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread", "time", "fs"]

[dependencies.serenity]
version = "0.11.5"
features = ["framework", "standard_framework", "rustls_backend", "collector"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
